--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,4 +101,17 @@
       transform: rotateX(0);
     }
   }
+
+  .animate-pulse-orange {
+    animation: pulse-orange 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+  }
+
+  @keyframes pulse-orange {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: .7;
+    }
+  }
 }
