--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -114,6 +114,22 @@
       opacity: .7;
     }
   }
+  
+  .animate-pulse-reveal {
+    animation: pulse-reveal 1.5s infinite alternate;
+  }
+
+  @keyframes pulse-reveal {
+    0% {
+      transform: scale(1);
+      opacity: 0.8;
+    }
+    100% {
+      transform: scale(1.05);
+      opacity: 1;
+    }
+  }
+
 
   .animate-blink {
     animation: blink 1s ease;
