--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,7 +132,7 @@
 
 
   .animate-blink {
-    animation: blink 1s ease-in-out;
+    animation: blink 1s ease-in-out infinite;
   }
 
   @keyframes blink {
@@ -186,4 +186,5 @@
   }
 }
 
+    
     
